--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -10,9 +10,9 @@ spring:
     username: sa
     password:
 
-#  redis:
-#    host: localhost
-#    port: 6379
+  redis:
+    host: localhost
+    port: 6379
 
   jpa:
     show-sql: true
@@ -28,3 +28,10 @@ logging:
       hibernate:
         sql: debug
         type: trace
+
+kakao-open-api:
+  place-search-keyword:
+    url: https://dapi.kakao.com/v2/local/search/keyword.json
+    app-key: 20d860c465148014adda59453ca9adba
+  place-detail:
+    url: https://map.kakao.com/link/map/{id}
