--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'org.webjars:jquery:3.4.1'
     implementation 'org.webjars:bootstrap:4.3.1'
 
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     runtimeOnly 'com.h2database:h2'
 
     compileOnly 'org.projectlombok:lombok'
